# ti-cup-energy-feedback-converter

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPETITION_EXPERIENCE.md  CONTRIBUTING.md  FAQ.md  GETTING_STARTED.md  HARDWARE.md  MODBUS_REGISTER_MAP.md  ROADMAP.md  VALIDATION_CHECKLIST.md
examples/: README.md
firmware/: CMakeLists.txt  README.md
firmware/include/: converter.h  converter_crc.h  converter_runtime.h
firmware/src/: converter.c  converter_crc.c  converter_runtime.c  demo.c
firmware/tests/: test_converter.c  test_crc.c  test_runtime.c
hardware/: BOM.md  README.md
simulation/: README.md  simulate.py
